Added and implemented new methods in EventQueryService and EventQueryServiceImpl. Improved code in methods and removed blank lines.