@@ -15,10 +15,10 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -27,14 +27,13 @@ public class EventQueryServiceImpl implements EventQueryService {
     private final PlaceRepository placeRepository;
     private final EventConverter eventConverter;
 
-
     /**
      * Retrieves {@link Event} objects using pagination. Filtering is enabled using {@link EventSpecification} which
      * will display {@link Event} using dynamic queries.
      *
      * @param searchCriteria    dto used for the attributes in {@link EventSpecification}
-     * @param page              page number
-     * @param size              page size
+     * @param page  page number
+     * @param size  page size
      * @return A {@link Page} containing {@link EventResponseDTO} objects.
      */
     @Override
@@ -43,20 +42,20 @@ public class EventQueryServiceImpl implements EventQueryService {
         Specification<Event> spec = Specification.where(null);
 
         UUID placeId = searchCriteria.placeId();
-        if(placeId != null) {
+        if (placeId != null) {
             spec = spec.and(EventSpecification.hasPlaceId(placeId));
         }
 
         String eventName = searchCriteria.eventName();
-        if(eventName != null && !eventName.isEmpty()) {
+        if (eventName != null && !eventName.isEmpty()) {
             spec = spec.and(EventSpecification.containsEventName(eventName));
         }
         LocalDateTime startDate = searchCriteria.startDate();
-        if(startDate != null) {
+        if (startDate != null) {
             spec = spec.and(EventSpecification.startsOnOrAfter(startDate));
         }
         LocalDateTime endDate = searchCriteria.endDate();
-        if(endDate != null) {
+        if (endDate != null) {
             spec = spec.and(EventSpecification.endsOnOrBefore(endDate));
         }
 
@@ -74,18 +73,45 @@ public class EventQueryServiceImpl implements EventQueryService {
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
 
         List<Event> pastEvents = eventRepository.findPastEvents(placeId, now, oneMonthAgo);
-        return pastEvents.stream().map(eventConverter::toEventResponseDTO).collect(Collectors.toList());
+        return pastEvents.stream().map(eventConverter::toEventResponseDTO).toList();
     }
 
     /**
      * Retrieves a list of upcoming {@link Event} objects that are happening in that Place
-     * @param placeId  uuid of the Place used for filtering
+     *
+     * @param placeId   uuid of the Place used for filtering
      * @return A list of {@link EventResponseDTO} containing event details.
      */
-    @Override public List<EventResponseDTO> findEventsByPlaceId(UUID placeId) {
-        Place place = placeRepository.findById(placeId).orElseThrow(()->new PlaceNotFoundException(placeId));
+    @Override public List<EventResponseDTO> findUpcomingEventsByPlaceId(UUID placeId) {
+        Place place = placeRepository.findById(placeId).orElseThrow(() -> new PlaceNotFoundException(placeId));
         List<Event> events = eventRepository.findEventsByPlaceId(placeId);
 
-        return events.stream().map(eventConverter::toEventResponseDTO).collect(Collectors.toList());
+        return events.stream().map(eventConverter::toEventResponseDTO).toList();
+    }
+
+    /**
+     * Retrieves a list of today {@link Event} objects that are happening in that Place
+     *
+     * @param placeId   uuid of the Place used for filtering
+     * @return A list of {@link EventResponseDTO} containing event details.
+     */
+    @Override public List<EventResponseDTO> findTodayEventsByPlaceId(UUID placeId) {
+        Place place = placeRepository.findById(placeId).orElseThrow(() -> new PlaceNotFoundException(placeId));
+        LocalDateTime today = LocalDateTime.now();
+        List<Event> todayEvents = eventRepository.findTodayEventsByPlaceId(placeId, today);
+
+        return todayEvents.stream().map(eventConverter::toEventResponseDTO).toList();
+    }
+
+    /**
+     * Retrieves a list of upcoming {@link Event} objects
+     *
+     * @return A list of {@link EventResponseDTO} containing event details.
+     */
+    @Override public List<EventResponseDTO> findUpcomingEvents() {
+        LocalDateTime today = LocalDateTime.now();
+        List<Event> upcomingEvents = eventRepository.findUpcomingEvents(today);
+
+        return upcomingEvents.stream().map(eventConverter::toEventResponseDTO).toList();
     }
 }
